--- a/myauth/templates/myauth/login.html
+++ b/myauth/templates/myauth/login.html
@@ -8,7 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-        <h1>主页</h1>
-        <a href="{% url 'myauth:登录' %}">登录</a>
+    <a href="{% url 'myauth:主页' %}">回到主页</a>
+    <form action="" method="POST">
+    {% csrf_token %}
+    <input type="text" name="用户名" placeholder="用户名">
+    <input type="password" name="密码" placeholder="密码">
+    <button type="submit">提交</button>
+    </form>
 </body>
 </html>
