--- a/myauth/templates/myauth/login.html
+++ b/myauth/templates/myauth/login.html
@@ -11,9 +11,11 @@
     <a href="{% url 'myauth:主页' %}">回到主页</a>
     <form action="" method="POST">
     {% csrf_token %}
+        {{ 错误 }}
     <input type="text" name="用户名" placeholder="用户名">
     <input type="password" name="密码" placeholder="密码">
     <button type="submit">提交</button>
     </form>
 </body>
 </html>
+<!- 注释的内容 ->
