--- a/myauth/templates/myauth/home.html
+++ b/myauth/templates/myauth/home.html
@@ -9,6 +9,10 @@
 </head>
 <body>
         <h1>主页</h1>
-        <a href="{% url 'myauth:登录' %}">登录</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'myauth:登出' %}">登出</a>
+        {% else %}
+            <a href="{% url 'myauth:登录' %}">登录</a>
+        {% endif %}
 </body>
 </html>
