--- a/myauth/templates/myauth/login.html
+++ b/myauth/templates/myauth/login.html
@@ -14,7 +14,7 @@
         {{ 错误 }}
     <input type="text" name="用户名" placeholder="用户名">
     <input type="password" name="密码" placeholder="密码">
-    <button type="submit">提交</button>
+    <button type="submit">登录</button>
     </form>
 </body>
 </html>
